# voice-rag-agents

./: .env.example  .gitignore  .ingest_state.json  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  ingest_incremental.py  ingest_notes.py  pyproject.toml
.github/workflows/: ci.yml
docs/: EXTENSION.md  INSTALL.md  OPERATIONS.md  acceptance_evidence.md  architecture.excalidraw  build_plan.md  openwebui_integration.md  release_notes.md  wave5_feedback_log.md
docs/blueprint/: 00_BLUEPRINT_ALL_IN_ONE.md  00_ONE_SHOT_AGENT_PLATFORM_PROMPT.md  01_WORK_STATEMENT.md  02_LANGGRAPH_PRODUCT_ARCHITECTURE.md  03_WORKFORCE_AGENTIC_ROLES.md  04_SUBAGENT_TASK_BACKLOG.md  09_MODULE_CONTRACTS_AND_INTERFACES.md  10_AUTONOMOUS_EXECUTION_GUARDRAILS.md  11_TEST_CASE_CATALOG.md  12_REFERENCES.md  README_PACKAGE_INDEX.md
evals/: runner.py
evals/datasets/: golden_qa.jsonl  meeting_notes.md
scripts/: healthcheck.sh
src/voice_rag_agents/: __init__.py  cli.py  default_config.py
tests/contract/: test_provider_contracts.py
tests/graph/: test_checkpointer.py  test_conditional_logic.py  test_graph_imports.py  test_no_evidence.py  test_run_artifacts.py  test_supervisor_graph.py
tests/integration/: test_milvus_integration.py  test_milvus_perf.py
tests/performance/: test_perf_smoke.py
tests/rag_quality/: test_golden_eval.py
tests/regression/: test_20260614_graph_double_wiring.py  test_20260614_state_key_drop.py
tests/security/: test_security.py
tests/unit/: test_api.py  test_chunker.py  test_config.py  test_document_loader.py  test_embedding_adapter.py  (+9 more)
(+25 files in other folders)
